--- a/2_伸缩盒模型/Flex布局官网案例.html
+++ b/2_伸缩盒模型/Flex布局官网案例.html
@@ -104,11 +104,12 @@
             color: white;
         }
 
+        /* 鼠标停留 */
         .centent-nav .item:hover {
             box-shadow: 0px 0px 20px black;
         }
 
-       .centent-nav .item:nth-child(1) {
+        .centent-nav .item:nth-child(1) {
             background-color: #595CA8;
         }
 
